--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modeva",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shauryabehra23.github.io/modeva",
+  "homepage": "https://shauryabehra23.github.io/Modeva",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
